fix(input): 修复因 overflow: hidden 导致部分 iOS 系统在定位使用 input 时无法聚焦的问题

--- a/src/style/input.scss
+++ b/src/style/input.scss
@@ -4,7 +4,6 @@
 @include b(input) {
   position: relative;
   -webkit-tap-highlight-color: transparent;
-  overflow: hidden;
   text-align: left;
 
   @include when(right) {
